> Optimized TypedInputMenuElement > Optimized menus
> Moved levels, campaigns, and settings out of resources and into game_data to prepare for getResource() refactoring